<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Main Activity + Login Activity + SignUp Activity -->
    <string name="app_name">PairUp</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="logo"></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="email">Email</string>
    <string name="email_hint">email@domain.com</string>
    <string name="default_color">"#FF9A72"</string>
    <string name="error_empty">"Cannot be empty"</string>
    <string name="error_too_long">Too long</string>
    <string name="error_too_short">Too short</string>
    <string name="error_gmail">Invalid Email</string>
    <string name="error_gmail_registered">Email already registered</string>
    <string name="error_repeat_password">Repeat Password</string>
    <string name="error_password_not_match">Passwords do not match</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <!-- Bottom Navigation Bar -->
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <!-- Host activity + CardView -->
    <string name="choose">"Choose meeting details"</string>
    <string name="select_date">Date</string>
    <string name="select_time">Time</string>
    <string name="select_location">Location</string>
    <string name="select_language">Language</string>
    <string name="join">Join</string>

    <!-- MapsActivity -->
    <string name="click_location">Click Location</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <!-- Profile activity -->
    <string name="write_biography">Biography</string>
    <string name="edit_biography">EDIT BIOGRAPHY</string>
    <string name="write_language_learning">Languages learning</string>
    <string name="edit_languages">EDIT LANGUAGES</string>
    <!-- Customize activity -->
    <string name="customize">Customize your profile</string>
    <string name="skip">SKIP</string>
    <string name="choose_color">CHOOSE AVATAR COLOR</string>
    <string name="save_color">SAVE COLOR</string>
    <string name="skipped">Edit Profile Later</string>

    <!-- Settings -->
    <string name="notifications">Notifications</string>
    <string name="disable_notifications">Disable notifications</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_username">Username</string>
    <string name="edit_bio">Biography</string>
    <string name="edit_color">Avatar color</string>
    <string name="change_language">Change app language</string>
    <string name="logout">Log out</string>
    <string name="about_us">About us</string>
    <string name="yes">Yes</string>


    <!-- About us -->
    <string name="about_us_content">We, PairUp developers, are currently pursuing a bachelor’s degree in Data Science and
        Engineering. PairUp is the outcome of our curiosity about learning new languages and passion for coding. We believe
        that learning a language should never be stressful, rather a fun experience. And what can be more fun than learning
        or practicing a language with more people! We encourage you to choose the language you want to learn and PairUp!</string>
    <string name="developers_title">Developers</string>
    <string name="developers_content">Viktoriia, Alicia, Tanvir</string>
    <string name="youtube">Find us on YouTube</string>
    <string name="copyright">Copyright ©2022. All rights reserved</string>

    <string name="enrolled_events">Joined events</string>
    <string name="no_joined">No joined events. Join and have fun!</string>
    <string name="filter_by">FILTER BY LANGUAGE</string>

</resources>