<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".EventInfoActivity">

    <!--
    <fragment
        android:id="@+id/map_info"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp" />
     -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_location"
        android:gravity="center"
        android:textColor="@color/main_skin"
        android:textStyle="bold"
        android:textSize="24dp"/>
    <TextView
        android:id="@+id/InfoLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/main_rosa_dark"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:gravity="center"
        android:textColor="@color/main_skin"
        android:textStyle="bold"
        android:textSize="24dp"/>
    <TextView
        android:id="@+id/InfoDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/main_rosa_dark"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_time"
        android:gravity="center"
        android:textColor="@color/main_skin"
        android:textStyle="bold"
        android:textSize="24dp"/>
    <TextView
        android:id="@+id/InfoTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/main_rosa_dark"
        android:textSize="20dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="bottom">
        <Button
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_width = "wrap_content"
            android:layout_height = "80dp"
            android:layout_weight=".50"
            android:backgroundTint="@color/main_skin_card"
            android:textColor="@color/main_rosa_dark"
            app:strokeColor="@color/main_rosa_dark"
            app:strokeWidth="1dp"/>
        <Button
            android:id="@+id/join_save"
            android:text="@string/join"
            android:layout_width = "wrap_content"
            android:layout_height = "80dp"
            android:layout_weight=".50"
            android:backgroundTint="@color/main_skin"
            android:textColor="@color/main_rosa_dark"
            app:strokeColor="@color/main_rosa_dark"
            app:strokeWidth="1dp"/>

    </LinearLayout>
</LinearLayout>