<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MapsActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="450dp" />

    <TextView
        android:id="@+id/text_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/click_location"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="bottom">
        <Button
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_width = "wrap_content"
            android:layout_height = "80dp"
            android:layout_weight=".50"
            android:backgroundTint="@color/main_skin_card"
            android:textColor="@color/main_rosa_dark"
            app:strokeColor="@color/main_rosa_dark"
            app:strokeWidth="1dp"/>
        <Button
            android:id="@+id/save"
            android:text="@string/save"
            android:layout_width = "wrap_content"
            android:layout_height = "80dp"
            android:layout_weight=".50"
            android:backgroundTint="@color/main_skin"
            android:textColor="@color/main_rosa_dark"
            app:strokeColor="@color/main_rosa_dark"
            app:strokeWidth="1dp"/>

    </LinearLayout>
</LinearLayout>