<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_rosa"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/signup_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textColor="#F1C09B"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/signup_username"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:background="#30ffffff"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName|textNoSuggestions"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/main_skin"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="20dp"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_text" />

            <EditText
                android:id="@+id/signup_gmail"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="#30ffffff"
                android:drawableStart="@drawable/ic_baseline_mail_24"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress|textNoSuggestions"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/main_skin"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_username" />

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="#30ffffff"
                android:drawableStart="@drawable/ic_baseline_key_24"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword|textNoSuggestions"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/main_skin"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_gmail" />

            <EditText
                android:id="@+id/signup_repeat_password"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="#30ffffff"
                android:drawableStart="@drawable/ic_baseline_key_24"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/repeat_password"
                android:inputType="textPassword|textNoSuggestions"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/main_skin"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_password" />

            <Button
                android:id="@+id/signup_button_signup"
                android:layout_width="360dp"
                android:layout_height="70dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="#F1C09B"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textColor="@color/main_rosa_dark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_repeat_password"
                app:strokeColor="@color/main_rosa_dark"
                app:strokeWidth="3dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>